# aa-discordtimerboard

./: .gitignore  README.md  pyproject.toml
discordtimerboard/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  models.py  parsing.py  urls.py  views.py
discordtimerboard/cogs/: __init__.py  timerboard.py
discordtimerboard/migrations/: 0001_initial.py  0002_command_restrictions.py  0002_notification_settings.py  0003_archivedtimer.py  0004_sov_support.py  0005_replace_sovfilter_with_m2m.py  0006_alter_archivedtimer_id_and_more.py  0006_auto_server_generated.py  0007_alter_sovalliancefilter_id.py  0008_sovalliancefilter_plain_integers.py  0009_strikethrough_and_sentnotification.py  __init__.py
tests/: test_parsing.py  test_timerboard_cog.py
